# django_template

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
source/: manage.py
source/core/: asgi.py  wsgi.py
source/core/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
source/core/settings/templates/: settings.dev.py
source/core/utils/: collections.py  misc.py  settings.py
