[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Alkandari-Y <yayalkandari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
pre-commit = "^3.6.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
